--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10655,3 +10655,12 @@ a.text-dark:focus {
   }
 }
 
+body {
+  font-size: 14px;
+  font-weight: normal;
+}
+
+nav.navbar.navbar-expand-lg {
+  margin-bottom: 20px;
+}
+
